2001-01-25  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/wm-spec.jl (init): the change to restore the
	selected desktop on restart introduced a bug, so I've changed
	it to not reselect the desktop until after the initialization
	process has finished (using the after-initialization-hook)

	* sawfish/wm/util/recolor-image.jl (make-image-recolorer*): new
	function, can recolour multiple channels at once (uses a common
	zero-channel, recolours based on whichever channel is non-zero
	for each pixel)

	(make-image-recolorer): now defined in terms of
	make-image-recolorer*

2001-01-23  John Harper  <jsh@eazel.com>

	* sawfish/wm/state/wm-spec.jl (init): check for an old value of
	_NET_CURRENT_DESKTOP before overwriting it. If set, switch to
	that desktop. This fixes the annoying `desktop always reset to
	zero on restart' bug

2001-01-22  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/auto-raise.jl (rw-on-focus, rw-out-focus):
	reverted the test for (eq mode 'normal). (See 2000-11-02 entry
	for reason.) This causes worse problems than it solves (e.g.
	switch desktops, M-TAB to a new window, but the old window gets
	raised)

2001-01-20  John Harper  <jsh@eazel.com>

	* version 0.36

2001-01-19  John Harper  <jsh@eazel.com>

	* sawfish/wm/user.jl (fallback-frame-style): changed this to
	`Crux' theme

	* sawfish/wm/frames.jl (frame-part-classes): added shade-button
	frame part class
	* sawfish/wm/keymaps.jl (shade-button-keymap): new keymap

	* sawfish/wm/util/recolor-image.jl (make-image-recolorer): new
	module, exports this function. A factory for creating functions
	that recolour images based on a white -> <color> -> black
	gradient. Abstracted this code out of the new `Crux' theme

	* sawfish/wm/gaol.jl (fully-safe-features): added
	sawfish.wm.util.recolor-image

2001-01-18  John Harper  <jsh@eazel.com>

	* sawfish/wm/ext/hide-dialogs.jl: new module, hide dialog
	windows in groups that don't have the focus. Currently there's