@@ -123,18 +123,23 @@ this mode. The single argument is the window to be placed."
   (define (place-window-randomly w)
     (let* ((dims (window-frame-dimensions w))
 	   (max-rect (maximize-find-workarea w))
+	   (rect-dims (if max-rect
+			  (cons (- (nth 2 max-rect) (nth 0 max-rect))
+				(- (nth 3 max-rect) (nth 1 max-rect)))
+			(current-head-dimensions)))
+	   (rect-pos (if max-rect
+			 (cons (nth 0 max-rect) (nth 1 max-rect))
+		       (current-head-offset)))
 	   (x (+ (cond
-		  ((and max-rect (< (car dims) (nth 2 max-rect)))
-		   (+ (nth 0 max-rect) (random (- (nth 2 max-rect)
-						  (car dims)))))
+		  ((< (car dims) (car rect-dims))
+		   (+ (car rect-pos) (random (- (car rect-dims) (car dims)))))
 		  ((< (car dims) (car (current-head-dimensions)))
 		   (random (- (car (current-head-dimensions)) (car dims))))
 		  (t 0))
 		 (car (current-head-offset))))
 	   (y (+ (cond
-		  ((and max-rect (< (cdr dims) (nth 3 max-rect)))
-		   (+ (nth 1 max-rect) (random (- (nth 3 max-rect)
-						  (cdr dims)))))
+		  ((< (cdr dims) (cdr rect-dims))
+		   (+ (cdr rect-pos) (random (- (cdr rect-dims) (cdr dims)))))
 		  ((< (cdr dims) (cdr (current-head-dimensions)))
 		   (random (- (cdr (current-head-dimensions)) (cdr dims))))
 		  (t 0))
